--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,9 +17,29 @@
                     <div class="profile-img-onprofile" style="background-image: url('/pfp.jpg');"></div>
                     <br>
                     <p class="title is-5 is-spaced">HidethePain</p>
-                    <p class="subtitle is-6">I am a certified tour guide with fluent English and I specialise in food
-                        tours.
-                    </p>
+                    <form class="form-horizontal" action="/users" method="POST">
+                        {{ form.csrf_token }}
+                        <fieldset>
+                            <div class="field">
+                                <label class="label" for="bio">Bio:</label>
+                                <div class="control">
+                                    {{ form.bio(id="bio", type="textarea", class="input", rows="5" ,placeholder=user.bio) }}
+                                    <ul>
+                                        {% for error in form.bio.errors %}
+                                            <li class="has-text-danger"> {{ error }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="field is-small">
+                                <label class="label" for="bio-submit"></label>
+                                <div class="control">
+                                    <input type='submit' value='Save' id="bio-submit" name="bio-submit"
+                                           class="button is-success">
+                                </div>
+                            </div>
+                        </fieldset>
+                    </form>
                     <span class="tag is-success">Verified</span>
                 </div>
                 <div class="box is-centered">
